# showcase_currency

./: pyproject.toml
showcase_currency/: __main__.py  app.py  convert.py  store.py  upload.py  utils.py
tests/: conftest.py  test_convert.py  test_store.py  test_upload.py
